2007-03-29  Per Abrahamsen  <abraham@dina.kvl.dk>

	* syntax.C (add_object): Renamed from 'add'.

	* Version 4.12 released.

	* lib/log.dai: Updated log parameterizations for new chemistry.

2007-03-26  Per Abrahamsen  <abraham@dina.kvl.dk>

	* reaction.h, reaction.C, reaction_std.C: Renamed from chemistry.
	* chemistry.h, chemistry.C, chemistry_std.C: Now models.
	* soil_chemical.h, soil_chemical.C: Merged into chemical.
	* soil_chemicals.h, soil_chemicals.C: Merged into chemistry.
	* chemicals.h, chemicals.C: Merged into chemistry.
	* Makefile (COMPONENTS, MODELS): Updated.

2007-03-22  Per Abrahamsen  <abraham@dina.kvl.dk>

	* metalib.C, metalib.h: New utility..
	* Makefile (OTHER): Added it.

2007-03-20  Per Abrahamsen  <abraham@dina.kvl.dk>

	* model.C, model.h: New file.
	* Makefile (OTHER): Added.
	* all: Use it.

2007-03-19  Per Abrahamsen  <abraham@dina.kvl.dk>

	* boolean_extern.C, number_extern.C: Removed.
	
	* groundwater_extern.C: New model.
	* scopesel.C, scopesel.h: New component.
	* condition_extern.C: Use it.
	* Makefile (COMPONENTS, MODELS): Add them.

	* scope_multi.C: Made it a model.
	* Makefile (OTHER): Removed.
	(SPECIALS): Added.

2007-03-18  Per Abrahamsen  <abraham@dina.kvl.dk>

	* scope_exchange.C: New model.
	* Makefile (MODELS): Added it.

	* scope.h, scope.C: Made it a library.
	* scope_id.h, scope_id.C: Made it a model.
	* Makefile (OTHER): Removed.
	(COMPONENTS, SPECIALS): Added.

2007-03-12  Per Abrahamsen  <abraham@dina.kvl.dk>

	* msoltranrect_none.C: New model.

	* msoltranrect_Mollerup.C: New model.
	* Makefile (MODELS): Added it.

2007-03-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* log_extern.h, log_extern.C: Export interface.
	* output.C, output.h: Made LogExtern a member.

2007-03-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.11 released.

2007-03-07  Per Abrahamsen  <abraham@dina.kvl.dk>

	* cdaisy.h, cdaisy.C: Support 'Toplevel'.
	* cmain.c: Use it.
	
	* Makefile (OTHER, REMOVE): Removed options.C and options.h.