@@ -120,10 +120,10 @@ Output::check (const Border& field, Treelog& msg)
 }
 
 void
-Output::initialize (Treelog& msg)
+Output::initialize (const Metalib& metalib, Treelog& msg)
 {
   for (size_t i = 0; i < logs.size (); i++)
-    logs[i]->initialize (msg);
+    logs[i]->initialize_common (metalib, msg);
 }
 
 const std::vector<Log*> 
